--- a/1.html
+++ b/1.html
@@ -1,22 +1,24 @@
+<!DOCTYPE html>
 <head>
-<title> saeon gallery </title>
-<<meta charset="utf-8">
+  <meta charset="utf-8">
+  <title>Document</title>
 </head>
 
 <body>
-
-<h1><a href="index.html"> web </a>
-
-<h1> Saeon Gallery </h1><br>
-
-<ol>
-  <li><a href="1.html"> 위치 </a></li>
-  <li><a href="2.html"> 분야 </a></li>
-  <li><a href="3.html"> 수익구조 </a></li>
-</ol>
-
-<h2>1.위치</h2>
-  서울시 강서구 마곡 테크노타워2 401호<br>
+  <h2 id = "hello">안녕하세요</h2>
+  <h2 id = "hi">올떄 마지막</h2>
 
 
+
+  
+  <script>
+    //아이디를 불러와서 해당 아이디 글자를 바꾼다.
+    document.getElementById('hello').innerHTML = '안녕';
+    //웹문서의 아이디 헬로
+    document.getElementById('hello').style.fontSize='30px';
+    document.getElementById('hello').style.color = 'red';
+    //document.getElementById('???').style.color = '???';
+    document.getElementById('hi').innerHTML = '올때바밤바';
+  </script>
 </body>
+</html>
