--- a/2.html
+++ b/2.html
@@ -1,23 +1,25 @@
+<!DOCTYPE html>
 <head>
-<title> saeon gallery </title>
-<<meta charset="utf-8">
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
 
-<h1><a href="index.html"> web </a>
+    <div class="alert-box" id="alert">알람 박스
+    <button onclick="아무렇게나작명('none');">닫기버튼</button>
+    </div>
+    <button onclick="아무렇게나작명('block');">열기버튼</button>
+    
 
-<h1> Saeon Gallery </h1><br>
-
-<ol>
-  <li><a href="1.html"> 위치 </a></li>
-  <li><a href="2.html"> 분야 </a></li>
-  <li><a href="3.html"> 수익구조 </a></li>
-</ol>
-
-<h2>2.분야</h2>
-  <p>가죽: 가죽을 이용해 가방, 반지갑, 카드지갑 등을 만든다.</p>
-  <p>나무: 목선반, 카빙, 가구 제작등을 통해 여러 나무 제품을 만든다.</p><br>
+    <script>
+        function 아무렇게나작명(a){
+            document.getElementById('alert').style.display=a; 
+        }
+  
+    </script>
 
 
 </body>
+</html>
