--- a/2.html
+++ b/2.html
@@ -26,7 +26,16 @@
         }
   
     </script>
-
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 
 </body>
+    <h4 id="test" class="yellow-bg">안녕</h4>
+
+    <script>
+
+        //document.getElementById('test').innerHTML = ;
+        $('#test').html("안녕");
+        $('#test').css('color', 'red');
+    </script>
+
 </html>
